Bug 419231 - Floating scrollbar in the toolbar customization palette is funky. r=dao
UltraBlame original commit: 6587497e7e9651a03597d49f5015fb3dc492bcc3

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -494,9 +494,41 @@ pinned
 ]
 )
 {
-display
+opacity
 :
-none
+0
+!
+important
+;
+}
+.
+tab
+-
+throbber
+.
+tab
+-
+label
+.
+tab
+-
+icon
+-
+image
+.
+tab
+-
+close
+-
+button
+{
+-
+moz
+-
+transition
+:
+opacity
+250ms
 ;
 }
 .
@@ -800,29 +832,72 @@ relative
 }
 %
 endif
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
+.
+bookmarks
+-
+toolbar
+-
+customize
+#
+wrapper
+-
+personal
+-
+bookmarks
 >
-toolbaritem
+#
+personal
+-
+bookmarks
+>
+#
+PlacesToolbar
 >
 hbox
-[
-type
-=
-"
-places
-"
-]
+>
+#
+PlacesToolbarItems
 {
 display
 :
 none
+;
+}
+#
+wrapper
+-
+personal
+-
+bookmarks
+[
+place
+=
+"
+toolbar
+"
+]
+>
+#
+personal
+-
+bookmarks
+>
+#
+PlacesToolbar
+>
+.
+bookmarks
+-
+toolbar
+-
+customize
+{
+display
+:
+-
+moz
+-
+box
 ;
 }
 #
