--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -4198,14 +4198,6 @@ toolbarpaletteitem
 -
 box
 {
-width
-:
-16px
-;
-height
-:
-16px
-;
 background
 :
 url
@@ -4229,6 +4221,7 @@ png
 no
 -
 repeat
+center
 ;
 }
 .
@@ -11966,11 +11959,40 @@ nativehyperlinktext
 %
 ifndef
 WINSTRIPE_AERO
-media
-(
+.
+ac
+-
+url
+-
+text
+:
 -
 moz
 -
+system
+-
+metric
+(
+windows
+-
+default
+-
+theme
+)
+.
+ac
+-
+action
+-
+text
+:
+-
+moz
+-
+system
+-
+metric
+(
 windows
 -
 default
@@ -11978,25 +12000,11 @@ default
 theme
 )
 {
-.
-ac
--
-url
--
-text
-.
-ac
--
-action
--
-text
-{
 color
 :
 #
 006600
 ;
-}
 }
 %
 endif
@@ -13898,20 +13906,6 @@ padding
 0
 4px
 ;
-border
--
-width
-:
-4px
-3px
-0
-;
-border
--
-style
-:
-solid
-;
 -
 moz
 -
@@ -13930,7 +13924,10 @@ png
 4
 3
 0
-fill
+/
+4px
+3px
+0
 repeat
 stretch
 ;
@@ -15672,21 +15669,6 @@ disabled
 ]
 )
 {
-border
--
-width
-:
-0
-2px
-0
-0
-;
-border
--
-style
-:
-solid
-;
 -
 moz
 -
@@ -15720,7 +15702,11 @@ png
 2
 0
 2
-fill
+/
+0
+2px
+0
+0
 ;
 }
 .
@@ -17891,21 +17877,6 @@ radius
 .
 5px
 ;
-border
--
-width
-:
-0
-8px
-0
-0
-;
-border
--
-style
-:
-solid
-;
 -
 moz
 -
@@ -17935,7 +17906,11 @@ png
 8
 0
 0
-fill
+/
+0
+8px
+0
+0
 ;
 -
 moz
@@ -19724,6 +19699,17 @@ style
 :
 solid
 ;
+border
+-
+top
+-
+right
+-
+radius
+:
+.
+3em
+;
 margin
 -
 right
@@ -19777,6 +19763,17 @@ left
 style
 :
 solid
+;
+border
+-
+top
+-
+left
+-
+radius
+:
+.
+3em
 ;
 margin
 -
