--- a/toolkit/content/customizeToolbar.css
+++ b/toolkit/content/customizeToolbar.css
@@ -56,48 +56,86 @@ overflow
 :
 auto
 ;
-margin
+display
 :
-0px
-15px
-10px
-15px
+block
 ;
-}
-#
-palette
--
-box
->
-hbox
->
-toolbarpaletteitem
-{
-padding
--
-top
-:
-8px
-;
-padding
--
-bottom
-:
-8px
-;
-}
-#
-palette
--
-box
->
-hbox
-{
 min
 -
 height
 :
-8em
+3em
+;
+}
+#
+palette
+-
+box
+>
+toolbarpaletteitem
+{
+width
+:
+110px
+;
+height
+:
+94px
+;
+overflow
+:
+hidden
+;
+display
+:
+inline
+-
+block
+;
+}
+.
+toolbarpaletteitem
+-
+box
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+width
+:
+110px
+;
+max
+-
+width
+:
+110px
+;
+}
+toolbarpaletteitem
+>
+label
+{
+text
+-
+align
+:
+center
 ;
 }
 #
