--- a/toolkit/themes/pinstripe/global/toolbar.css
+++ b/toolkit/themes/pinstripe/global/toolbar.css
@@ -480,6 +480,12 @@ palette
 {
 margin
 -
+top
+:
+0
+;
+margin
+-
 bottom
 :
 2px
@@ -487,6 +493,44 @@ bottom
 height
 :
 32px
+;
+}
+.
+toolbarpaletteitem
+-
+box
+[
+type
+=
+"
+spring
+"
+]
+[
+place
+=
+"
+palette
+"
+]
+{
+background
+-
+position
+:
+center
+;
+margin
+-
+left
+:
+8px
+;
+margin
+-
+right
+:
+8px
 ;
 }
 toolbarpaletteitem
